[package]
name = "palette-generator"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.10.0", features = ["image", "debug", "canvas"] }
palette = { version = "0.7.0" }
